sumo/tests/sumo/output/meandata_edgebased/errors/false_order/errors.sumo
Error: The 'begin' at position 2 is not smaller than the according 'end' for meandata-edge 'dump_15'.
Error: The 'begin' at position 2 is not smaller than the according 'end' for meandata-edge 'dump_60'.
Quitting (on error).
